--- a/botapp/static/sass/layout/_header.scss
+++ b/botapp/static/sass/layout/_header.scss
@@ -8,7 +8,7 @@ header {
   }
   
   header.header-title{
-    height: 100%
+    height: 100%;
   }
 
   nav {
@@ -28,10 +28,10 @@ header {
   .nav-item {
     padding: 10px;
     margin-right: 10px;
-    
+
     & > a {
       text-decoration: none;
-      font-size: 1em;
+      font-size: 1.5em;
       font-style: normal;
       font-variant: small-caps;
       color: $white;
